# advent-of-code-2023

./: .gitignore  CMakeLists.txt  README.md  run.sh  update_compile_commands.sh
.cache/clangd/index/: day1.h.0184A095755281CC.idx  day2.cpp.8606E5AB599A5951.idx  day2.h.D075BDB225D54868.idx  day3.cpp.DE5C80E2794D39C2.idx  day3.h.25CBD3B92AE14096.idx  main.cpp.7C3DD99A032FFEBE.idx  main.cpp.865203E22835EF1E.idx  main.cpp.DBDC86C4856098F1.idx  test_main.cpp.2E9A55D18D57CB02.idx  test_main.cpp.3E9BDD0580AE4BCA.idx
cpp/: CMakeLists.txt  test.sh
cpp/day1/: CMakeLists.txt
cpp/day1/include/: day1.h
cpp/day10/: CMakeLists.txt
cpp/day10/include/: day10.h
cpp/day10/src/: day10.cpp  main.cpp
cpp/day10/test/: test_main.cpp
cpp/day2/: CMakeLists.txt
cpp/day2/include/: day2.h
cpp/day2/src/: main.cpp
cpp/day3/: CMakeLists.txt
cpp/day4/include/: day4.h
cpp/day4/src/: main.cpp
cpp/day4/test/: test_main.cpp
cpp/day5/include/: day5.h
cpp/day5/src/: day5.cpp  main.cpp
cpp/day7/: CMakeLists.txt
cpp/day8/: CMakeLists.txt
cpp/day8/include/: day8.h
cpp/day8/src/: day8.cpp
cpp/day9/: CMakeLists.txt
cpp/day9/include/: day9.h
cpp/day9/src/: day9.cpp  main.cpp
cpp/day9/test/: test_main.cpp
cpp/day_example/include/: day5.h
cpp/day_example/src/: main.cpp
day1/: main.cpp
day2/: main.cpp
day2/include/: day2.h
day2/src/: day2.cpp  main.cpp
day2/test/: test_main.cpp
day3/include/: day3.h
day3/src/: day3.cpp
day3/test/: test_main.cpp
day4/: CMakeLists.txt
day4/include/: day3.h
day4/src/: day3.cpp  day4.cpp  main.cpp
day5/: CMakeLists.txt
day5/include/: day5.h
day5/src/: day5.cpp  main.cpp
day5/test/: test_main.cpp
day6/: CMakeLists.txt
day6/include/: day6.h
day6/src/: day6.cpp  main.cpp
day6/test/: test_main.cpp
day7/include/: day7.h
day7/src/: day7.cpp  main.cpp
day7/test/: test_main.cpp
day8/src/: main.cpp
day8/test/: test_main.cpp
day_example/test/: test_main.cpp
rust/day11/src/: lib.rs  main.rs
rust/day12/src/: lib.rs  main.rs
rust/day13/src/: lib.rs  main.rs
rust/day14/: ¨
rust/day14/src/: lib.rs  main.rs
rust/day15/src/: lib.rs  main.rs
rust/day16/src/: lib.rs  main.rs
rust/day17/data/: test1.txt
rust/day17/src/: lib.rs  main.rs  node.rs
rust/day18/: Cargo.toml
rust/day18/data/: test1.txt
rust/day18/src/: lib.rs  main.rs
rust/day19/: Cargo.toml
rust/day19/src/: lib.rs  main.rs
rust/day20/: Cargo.toml
rust/day20/src/: lib.rs  main.rs
rust/day21/: :w  ¨
rust/day21/src/: lib.rs  main.rs
rust/day22/: Cargo.toml
rust/day22/data/: .test1.txt.swp  test1.txt
rust/day22/src/: lib.rs  main.rs
rust/day23/src/: lib.rs  lib_cp.rs  lib_cp2.rs  main.rs
rust/day24/: Cargo.toml  ¨
rust/day24/src/: lib.rs  main.rs
